# ChangeLog for app-shells/bash-completion
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.205 2009/12/25 02:32:43 darkside Exp $

*bash-completion-1.1-r5 (25 Dec 2009)

  25 Dec 2009; Jeremy Olexa <darkside@gentoo.org>
  -bash-completion-1.1-r4.ebuild, +bash-completion-1.1-r5.ebuild:
  Fix rsync ssh completion, bug 297818

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  bash-completion-1.1-r4.ebuild:
  alpha/ia64/s390 stable wrt #295348

  11 Dec 2009; Brent Baude <ranger@gentoo.org>
  bash-completion-1.1-r4.ebuild:
  Marking bash-completion-1.1-r4 ppc64 for bug 295348

  07 Dec 2009; Tiago Cunha <tcunha@gentoo.org>
  bash-completion-1.1-r4.ebuild:
  stable sparc, bug 295348

  07 Dec 2009; Jeroen Roovers <jer@gentoo.org>
  bash-completion-1.1-r4.ebuild:
  Stable for HPPA (bug #295348).

  02 Dec 2009; Markus Meier <maekke@gentoo.org>
  bash-completion-1.1-r4.ebuild:
  amd64/arm/x86 stable, bug #295348

*bash-completion-1.1-r4 (01 Dec 2009)

  01 Dec 2009; Jeremy Olexa <darkside@gentoo.org>
  -bash-completion-1.1-r3.ebuild, +bash-completion-1.1-r4.ebuild,
  files/bash-completion.sh:
  Revbump for minor ommision in bash-completion.sh file which didn't clean
  up the env properly. bug 293871

  11 Nov 2009; Fabian Groffen <grobian@gentoo.org>
  bash-completion-1.1-r3.ebuild:
  Marked ~m68k-mint, thanks Alan Hourihane, bug #291402

*bash-completion-1.1-r3 (21 Oct 2009)

  21 Oct 2009; Jeremy Olexa <darkside@gentoo.org>
  -bash-completion-1.1-r2.ebuild, +bash-completion-1.1-r3.ebuild:
  revbump to fix bug 263105 - long standing issue since bash-4 was
  stabilized

*bash-completion-1.1-r2 (16 Oct 2009)

  16 Oct 2009; Jeremy Olexa <darkside@gentoo.org>
  -bash-completion-1.1-r1.ebuild, +bash-completion-1.1-r2.ebuild,
  files/bash-completion.sh:
  revbump for another init script ommision, forgot to source