@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/bash-completion
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.205 2009/12/25 02:32:43 darkside Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash-completion/ChangeLog,v 1.206 2010/01/05 01:59:45 josejx Exp $
+
+  05 Jan 2010; Joseph Jezak <josejx@gentoo.org>
+  bash-completion-1.1-r5.ebuild:
+  Marked ppc stable for bug #295348.
 
 *bash-completion-1.1-r5 (25 Dec 2009)
 
